# cpp-click-game

./: CMakeLists.txt
docs/: plan.md
src/: main.cpp  pch.h
src/asset/: asset.cpp  asset.h  loader.cpp  loader.h
src/core/: core.cpp  core.h
src/graphics/: color.h  config.h  fwd.h  material.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h
src/gui/: fwd.h  gui.cpp  gui.h
src/si/: handle.h  hash.h  noncopyable.h  sync.h
src/si/asset/: asset.cpp  asset.h  loader.cpp  loader.h
src/t9/: defer.h  handle.h  hash.h
src/task/: event.h
